--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 vaadin.launch-browser=true
 spring.application.name=EcomElectronics
+spring.datasource.url=jdbc:postgresql://localhost:5432/ProductManagement_DB
+spring.datasource.username=postgres
+spring.datasource.password=7_In76*529
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
