--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/ProductManagement_DB
 spring.datasource.username=postgres
 spring.datasource.password=7_In76*529
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+logging.level.root=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.ecommerce.electronics=DEBUG
 
 
