Created OrderManagement->project restructure

--- a/product-management-services/src/main/resources/application.properties
+++ b/product-management-services/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 vaadin.launch-browser=true
-spring.application.name=EcomElectronics
+spring.application.name=EcomElectronicsProductManagement
 spring.datasource.url=jdbc:postgresql://localhost:5432/ProductManagement_DB
 spring.datasource.username=postgres
 spring.datasource.password=7_In76*529
