Basic Fetch and Add for Order Management system

--- a/order-management-services/src/main/resources/application.properties
+++ b/order-management-services/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 vaadin.launch-browser=true
 spring.application.name=EcomElectronicsOrderManagement
-spring.datasource.url=jdbc:postgresql://localhost:5432/ProductManagement_DB
+spring.datasource.url=jdbc:postgresql://localhost:5432/OrderManagement_DB
 spring.datasource.username=postgres
 spring.datasource.password=7_In76*529
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
